@@ -1,7 +1,7 @@
 /* -*- mode:C; indent-tabs-mode:t; tab-width:8; c-basic-offset:8; -*- */
 
 /*
- * Color lines for gnome
+ * Color lines for GNOME
  * (c) 1999 Free Software Foundation
  * Authors: Robert Szokovacs <szo@appaloosacorp.hu>
  *          Szabolcs Ban <shooby@gnome.hu>
@@ -33,7 +33,7 @@
 GtkWidget *bah_window = NULL;
 
 GtkWidget *draw_area;
-static GtkWidget *app, *vb, *appbar, *pref_dialog;
+static GtkWidget *app, *appbar, *pref_dialog;
 GtkWidget *next_draw_area; /* XXX Shouldn't be this much externls! */
 field_props field[FIELDSIZE*FIELDSIZE];
 GdkPixbuf *box_pixbuf = NULL;
@@ -74,19 +74,17 @@ static void
 load_image (gchar *fname,
 	    GdkPixbuf **pixbuf)
 {
-	char *tmp, *fn;
-        GdkColor bgcolor;
+	gchar *tmp, *fn;
 	GdkPixbuf *image;
-        GdkImage *tmpimage;
     
-	tmp = g_strconcat ( "glines/", fname, NULL);
+	tmp = g_build_filename ("glines", fname, NULL);
 
 	fn = gnome_program_locate_file (NULL, GNOME_FILE_DOMAIN_APP_PIXMAP, (tmp), FALSE, NULL);
-	g_free( tmp );
+	g_free (tmp);
 
 	if (!g_file_test (fn, G_FILE_TEST_EXISTS)) {
 		char *message = g_strdup_printf (_("Glines couldn't find image file:\n%s\n\n"
-			"Please check your Glines installation"), fn);
+						   "Please check your Glines installation"), fn);
 		GtkWidget *w = gtk_message_dialog_new (GTK_WINDOW (app),
 						       GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
 						       GTK_MESSAGE_ERROR,
@@ -119,7 +117,7 @@ help_cb (GtkWidget * widget, gpointer data)
 }
 
 void
-set_inmove(int i)
+set_inmove (int i)
 {
  	static int timeou = -1;
  	int ms;
@@ -133,8 +131,8 @@ set_inmove(int i)
 }
 
 
-void
-reset_game(void)
+static void
+reset_game (void)
 {
 	int i;
 
@@ -150,15 +148,15 @@ reset_game(void)
 	init_new_balls(5, -1);
 }
 
-void
+static void
 refresh_screen (void)
 {
 	draw_all_balls (draw_area, -1);
 	draw_preview ();
 }
 
-void
-start_game(void)
+static void
+start_game (void)
 {
 	char string[20];
 
@@ -173,8 +171,8 @@ start_game(void)
 }
 
  
-void
-reset_pathsearch(void)
+static void
+reset_pathsearch (void)
 {
 	int i;
 
@@ -183,7 +181,7 @@ reset_pathsearch(void)
 }
 
 void
-init_preview(void)
+init_preview (void)
 {
 	int i;
 
@@ -194,7 +192,7 @@ init_preview(void)
 }
 
 void
-draw_preview(void)
+draw_preview (void)
 {
 	int i;
 
@@ -204,7 +202,7 @@ draw_preview(void)
 	}
 }
 
-void
+static void
 show_scores (gint pos)
 {
 	GtkWidget *dialog;
@@ -216,7 +214,8 @@ show_scores (gint pos)
 	}
 }
 
-void update_score_state ()
+static void
+update_score_state ()
 {
         gchar **names = NULL;
         gfloat *scores = NULL;
@@ -234,8 +233,8 @@ void update_score_state ()
 	}
 }
 
-void
-game_over(void)
+static void
+game_over (void)
 {
 	int pos;
 
@@ -246,8 +245,8 @@ game_over(void)
 	return;
 }
 
-int
-check_gameover(void)
+static int
+check_gameover (void)
 {
 	int i = 0;
 	while((i < FIELDSIZE*FIELDSIZE) && field[i].color != 0)
@@ -261,7 +260,7 @@ check_gameover(void)
 }
 
 int
-init_new_balls(int num, int prev)
+init_new_balls (int num, int prev)
 {
 	int i, j = -1;
 	gfloat num_boxes = FIELDSIZE * FIELDSIZE;
@@ -278,95 +277,93 @@ init_new_balls(int num, int prev)
 }
 
 void
-draw_all_balls(GtkWidget *widget, int coord)
+draw_all_balls (GtkWidget *widget, int coord)
 {
-	int i;
-
-	if(coord != -1)
+	if (coord != -1)
 	{
-		draw_ball(widget, coord%FIELDSIZE, coord/FIELDSIZE);
+		draw_ball (widget, coord % FIELDSIZE, coord / FIELDSIZE);
 		return;
 	}
 
         /* Redraw the whole field */
-        gdk_window_invalidate_rect(widget->window, NULL, FALSE);
+        gdk_window_invalidate_rect (widget->window, NULL, FALSE);
 }
 
 void
-draw_box(GtkWidget *widget, int x, int y)
+draw_box (GtkWidget *widget, int x, int y)
 {
-	gtk_widget_queue_draw_area(widget, x * BOXSIZE, y * BOXSIZE,
-				   BOXSIZE, BOXSIZE);
+	gtk_widget_queue_draw_area (widget, x * BOXSIZE, y * BOXSIZE,
+				    BOXSIZE, BOXSIZE);
 }
 
 void
-draw_ball(GtkWidget *widget, int x, int y)
+draw_ball (GtkWidget *widget, int x, int y)
 {
-	gtk_widget_queue_draw_area(widget, x * BOXSIZE, y * BOXSIZE,
-				   BOXSIZE, BOXSIZE);
+	gtk_widget_queue_draw_area (widget, x * BOXSIZE, y * BOXSIZE,
+				    BOXSIZE, BOXSIZE);
 }
 
-int
-route(int num)
+static int
+route (int num)
 {
 	int i;
 	int flag = 0;
 
-	if(field[target].pathsearch == num)
+	if (field[target].pathsearch == num)
 		return 1;
-	for(i=0; i < FIELDSIZE*FIELDSIZE; i++)
+	for (i = 0; i < FIELDSIZE*FIELDSIZE; i++)
 	{
-		if(field[i].pathsearch == num)
+		if (field[i].pathsearch == num)
 		{
 			flag = 1;	
-			if((i/9 > 0) && (field[i - 9].pathsearch == -1) && (field[i - 9].color == 0))
+			if ((i/9 > 0) && (field[i - 9].pathsearch == -1) && (field[i - 9].color == 0))
 				field[i - 9].pathsearch = num+1;
-			if((i/9 < FIELDSIZE - 1) && (field[i + 9].pathsearch == -1) && (field[i + 9].color == 0))
+			if ((i/9 < FIELDSIZE - 1) && (field[i + 9].pathsearch == -1) && (field[i + 9].color == 0))
 				field[i + 9].pathsearch = num+1;
-			if((i%9 > 0) && (field[i - 1].pathsearch == -1) && (field[i - 1].color == 0))
+			if ((i%9 > 0) && (field[i - 1].pathsearch == -1) && (field[i - 1].color == 0))
 				field[i - 1].pathsearch = num+1;
-			if((i%9 < FIELDSIZE - 1) && (field[i + 1].pathsearch == -1) && (field[i + 1].color == 0))
+			if ((i%9 < FIELDSIZE - 1) && (field[i + 1].pathsearch == -1) && (field[i + 1].color == 0))
 			{
 				field[i + 1].pathsearch = num+1;
 			}
 		}
 	}
-	if(flag == 0) return 0;
+	if (flag == 0) return 0;
 	return 2;
 }
 
-void
-fix_route(int num, int pos)
+static void
+fix_route (int num, int pos)
 {
 	int i;
 
-	for(i = 0; i< FIELDSIZE*FIELDSIZE; i++)
-		if((i != pos) && (field[i].pathsearch == num))
+	for (i = 0; i< FIELDSIZE*FIELDSIZE; i++)
+		if ((i != pos) && (field[i].pathsearch == num))
 			field[i].pathsearch = -1;
-	if(num < 2)
+	if (num < 2)
 		return;
-	if((pos/9 > 0) && (field[pos - 9].pathsearch == num - 1))
+	if ((pos/9 > 0) && (field[pos - 9].pathsearch == num - 1))
 		fix_route(num - 1, pos - 9);	
-	if((pos%9 > 0) && (field[pos - 1].pathsearch == num - 1))
+	if ((pos%9 > 0) && (field[pos - 1].pathsearch == num - 1))
 		fix_route(num - 1, pos - 1);	
-	if((pos/9 < FIELDSIZE - 1) && (field[pos + 9].pathsearch == num - 1))
+	if ((pos/9 < FIELDSIZE - 1) && (field[pos + 9].pathsearch == num - 1))
 		fix_route(num - 1, pos + 9);	
-	if((pos%9 < FIELDSIZE - 1) && (field[pos + 1].pathsearch == num - 1))
+	if ((pos%9 < FIELDSIZE - 1) && (field[pos + 1].pathsearch == num - 1))
 		fix_route(num - 1, pos + 1);	
 }
 	
 int
-find_route(void)
+find_route (void)
 {
 	int i = 0;
 	int j = 0;
 
 	field[active].pathsearch = i;
-	while((j = route(i)))
+	while ((j = route (i)))
 	{
-		if(j == 1)
+		if (j == 1)
 		{
-			fix_route(i, target);
+			fix_route (i, target);
 			return 1;
 		}
 		i++;
@@ -374,8 +371,8 @@ find_route(void)
 	return 0;
 }
 	
-void
-deactivate(GtkWidget *widget, int x, int y)
+static void
+deactivate (GtkWidget *widget, int x, int y)
 {
 	field[active].active = 0;
 	field[active].phase = 0; 
@@ -458,7 +455,7 @@ static gint
 preview_expose_event (GtkWidget *widget, GdkEventExpose *event, gpointer gp)
 {
 	GdkGC *gc;
-	int i;
+	gint i;
 
         gc = gdk_gc_new (widget->window);
 	for (i = 0; i < 3; i++) {
@@ -476,7 +473,7 @@ preview_expose_event (GtkWidget *widget, GdkEventExpose *event, gpointer gp)
 				 5 + i * BOXSIZE, 5, BALLSIZE, BALLSIZE,
 				 GDK_RGB_DITHER_NORMAL, 0, 0);
 	}
-        gdk_gc_unref (gc);
+        g_object_unref (gc);
 
 	return FALSE;
 }
@@ -497,7 +494,7 @@ draw_grid (void)
 
         gc = gdk_gc_new (draw_area->window);
 
-        gdk_color_alloc (cmap, &color);
+	gdk_colormap_alloc_color (cmap, &color, FALSE, TRUE);
         gdk_gc_set_foreground (gc, &color);
 
         for (x = BOXSIZE; x < FIELDSIZE*BOXSIZE; x = x + BOXSIZE) {
@@ -507,7 +504,7 @@ draw_grid (void)
                 gdk_draw_line (surface, gc, 0, y, FIELDSIZE*BOXSIZE, y);
         }
 
-        gdk_gc_unref (gc);
+        g_object_unref (gc);
 }
 
 
@@ -558,7 +555,7 @@ field_expose_event (GtkWidget *widget, GdkEventExpose *event, gpointer gp)
 			}
 		}
 	}
-        gdk_gc_unref (gc);
+        g_object_unref (gc);
 
 	gdk_window_set_back_pixmap (widget->window, surface, 0);
 	gdk_window_clear (widget->window);
@@ -566,34 +563,36 @@ field_expose_event (GtkWidget *widget, GdkEventExpose *event, gpointer gp)
 	return FALSE;
 }
 
-void
+static void
 kill_tagged(GtkWidget *widget, int num)
 {
 	int i;
 
-	for(i=0; i <= num; i++)
+	for (i = 0; i <= num; i++)
 		{
 			field[field[i].pathsearch].color = 0;
 			field[field[i].pathsearch].phase = 0;
 			field[field[i].pathsearch].active = 0;
-			draw_box(widget, field[i].pathsearch%9, field[i].pathsearch/9);
+			draw_box (widget, field[i].pathsearch % 9,
+				  field[i].pathsearch / 9);
 		}
 }
 
-int
-addscore(int num)
+static int
+addscore (int num)
 {
 	int i = 0;
 	
-	while((sctab[i].num != num) && (sctab[i].num != 0))
+	while ((sctab[i].num != num) && (sctab[i].num != 0))
 		i++;
-	if(sctab[i].num == 0) return 10 + (int)pow((double)2.0,(double)(num - 5));
-	return(sctab[i].score);
+	if (sctab[i].num == 0)
+		return 10 + (int) pow ((double)2.0, (double)(num - 5));
+	return (sctab[i].score);
 }
 	
 
-int
-check_goal(GtkWidget *widget, int num, int is_score)
+static int
+check_goal (GtkWidget *widget, int num, int is_score)
 {
 	int count = 0;
 	int subcount = 0;
@@ -605,20 +604,20 @@ check_goal(GtkWidget *widget, int num, int is_score)
 	/* Horizontal */
 
 	x++;
-	while((x <= FIELDSIZE - 1) && (field[x + y*9].color == field[num].color))
+	while ((x <= FIELDSIZE - 1) && (field[x + y*9].color == field[num].color))
 	{
 		subcount++;
 		field[count + subcount].pathsearch = x + y*9;
 		x++;
 	}
-	x = num%9 - 1;
-	while((x >= 0) && (field[x + y*9].color == field[num].color))
+	x = num % 9 - 1;
+	while ((x >= 0) && (field[x + y*9].color == field[num].color))
 	{
 		subcount++;
 		field[count + subcount].pathsearch = x + y*9;
 		x--;
 	}
-	if(subcount >= 4)
+	if (subcount >= 4)
 		count +=subcount;
 	subcount = 0;
 
@@ -626,20 +625,20 @@ check_goal(GtkWidget *widget, int num, int is_score)
 
 	x = num%9;
 	y++;
-	while((y <= FIELDSIZE - 1) && (field[x + y*9].color == field[num].color))
+	while ((y <= FIELDSIZE - 1) && (field[x + y*9].color == field[num].color))
 	{
 		subcount++;
 		field[count + subcount].pathsearch = x + y*9;
 		y++;
 	}
-	y = num/9 - 1;
-	while((y >= 0) && (field[x + y*9].color == field[num].color))
+	y = num / 9 - 1;
+	while ((y >= 0) && (field[x + y*9].color == field[num].color))
 	{
 		subcount++;
 		field[count + subcount].pathsearch = x + y*9;
 		y--;
 	}
-	if(subcount >= 4)
+	if (subcount >= 4)
 		count +=subcount;
 	subcount = 0;
 	
@@ -647,122 +646,123 @@ check_goal(GtkWidget *widget, int num, int is_score)
 	
 	x = num%9 + 1;
 	y = num/9 + 1;
-	while((y <= FIELDSIZE - 1) && (x <= FIELDSIZE - 1) && (field[x + y*9].color == field[num].color))
+	while ((y <= FIELDSIZE - 1) && (x <= FIELDSIZE - 1) && (field[x + y*9].color == field[num].color))
 	{
 		subcount++;
 		field[count + subcount].pathsearch = x + y*9;
 		y++;
 		x++;
 	}
-	x = num%9 - 1;
-	y = num/9 - 1;
-	while((y >= 0) && (x >= 0) && (field[x + y*9].color == field[num].color))
+	x = num % 9 - 1;
+	y = num / 9 - 1;
+	while ((y >= 0) && (x >= 0) && (field[x + y*9].color == field[num].color))
 	{
 		subcount++;
 		field[count + subcount].pathsearch = x + y*9;
 		y--;
 		x--;
 	}
-	if(subcount >= 4)
+	if (subcount >= 4)
 		count +=subcount;
 	subcount = 0;
 
 	/* Diagonal +-*/
 	
-	x = num%9 + 1;
-	y = num/9 - 1;
-	while((y >= 0) && (x <= FIELDSIZE - 1) && (field[x + y*9].color == field[num].color))
+	x = num % 9 + 1;
+	y = num / 9 - 1;
+	while ((y >= 0) && (x <= FIELDSIZE - 1) && (field[x + y*9].color == field[num].color))
 	{
 		subcount++;
 		field[count + subcount].pathsearch = x + y*9;
 		y--;
 		x++;
 	}
-	x = num%9 - 1;
-	y = num/9 + 1;
-	while((y <= FIELDSIZE - 1) && (x >= 0) && (field[x + y*9].color == field[num].color))
+	x = num % 9 - 1;
+	y = num / 9 + 1;
+	while ((y <= FIELDSIZE - 1) && (x >= 0) && (field[x + y*9].color == field[num].color))
 	{
 		subcount++;
 		field[count + subcount].pathsearch = x + y*9;
 		y++;
 		x--;
 	}
-	if(subcount >= 4)
+	if (subcount >= 4)
 		count +=subcount;
 	subcount = 0;
 
 	/* Finish */
 	
-	if(count >= 4)
+	if (count >= 4)
 	{
-		kill_tagged(widget, count);
-		if(is_score)
+		kill_tagged (widget, count);
+		if (is_score)
 		{
 			char string[20];
-			score += addscore(count+1);
-			g_snprintf(string, 19, "%d", score);
-			gtk_label_set_text(GTK_LABEL(scorelabel), string);
+			score += addscore (count+1);
+			g_snprintf (string, 19, "%d", score);
+			gtk_label_set_text (GTK_LABEL (scorelabel), string);
 		}
 
 		subcount = 1;
 	}
-	reset_pathsearch();
+	reset_pathsearch ();
 	return subcount;
 }
 
 gint
-animate(gpointer gp)
+animate (gpointer gp)
 {
 	GtkWidget *widget = GTK_WIDGET (gp);
 	int x, y;
 	int newactive = 0;
 	/* FIXME nem 9 hanem FIELDSIZE! */
-	x = active%9;
-	y = active/9;
+	x = active % 9;
+	y = active / 9;
 
-	if(active == -1) return TRUE;
-	if(inmove != 0)
+	if (active == -1) return TRUE;
+	if (inmove != 0)
 	{
-		if((x > 0) && (field[active - 1].pathsearch == field[active].pathsearch+1))
+		if ((x > 0) && (field[active - 1].pathsearch == field[active].pathsearch+1))
 			newactive = active - 1;
-		else if((x < 8) && (field[active + 1].pathsearch == field[active].pathsearch+1))
+		else if ((x < 8) && (field[active + 1].pathsearch == field[active].pathsearch+1))
 			newactive = active + 1;
-		else if((y > 0) && (field[active - 9].pathsearch == field[active].pathsearch+1))
+		else if ((y > 0) && (field[active - 9].pathsearch == field[active].pathsearch+1))
 			newactive = active - 9;
-		else if((y < 8) && (field[active + 9].pathsearch == field[active].pathsearch+1))
+		else if ((y < 8) && (field[active + 9].pathsearch == field[active].pathsearch+1))
 			newactive = active + 9;
 		else
 		{
 			set_inmove (0);
 		}
-		draw_box(widget, x, y);
-		x = newactive%9;
-		y = newactive/9;
+		draw_box (widget, x, y);
+		x = newactive % 9;
+		y = newactive / 9;
 		field[newactive].phase = field[active].phase;
 		field[newactive].color = field[active].color;
 		field[active].phase = 0;
 		field[active].color = 0;
 		field[active].active = 0;
-		if(newactive == target)
+		if (newactive == target)
 		{
 			target = -1;
 			set_inmove (0);
 			active = -1;
 			field[newactive].phase = 0;
 			field[newactive].active = 0;
-			draw_ball(widget, x, y);
-			reset_pathsearch();
-			if(!check_goal(widget, newactive, 1))
+			draw_ball (widget, x, y);
+			reset_pathsearch ();
+			if (!check_goal (widget, newactive, 1))
 			{
-				for(x = 0; x < 3; x++)
+				for (x = 0; x < 3; x++)
 				{
-					int tmp = init_new_balls(1, x);
-					draw_all_balls(widget, tmp);
-					check_goal(widget, tmp, 0);
-					if(check_gameover() == -1) return FALSE;
+					int tmp = init_new_balls (1, x);
+					draw_all_balls (widget, tmp);
+					check_goal (widget, tmp, 0);
+					if (check_gameover () == -1)
+						return FALSE;
 				}
-				init_preview();
-				draw_preview();
+				init_preview ();
+				draw_preview ();
 			}
 			return TRUE;
 		}
@@ -771,8 +771,9 @@ animate(gpointer gp)
 	}
 
 	field[active].phase++;
-	if(field[active].phase >= 4) field[active].phase = 0;
-	draw_ball(widget, x, y);
+	if(field[active].phase >= 4)
+		field[active].phase = 0;
+	draw_ball (widget, x, y);
 
 	return TRUE;
 }
@@ -780,24 +781,14 @@ animate(gpointer gp)
 static void
 game_new_callback (GtkWidget *widget, void *data)
 {
-	reset_game();
- 	start_game();
+	reset_game ();
+ 	start_game ();
 }
 
 static void
 game_top_ten_callback(GtkWidget *widget, gpointer data)
 {
 	show_scores (0);
-}
-
-static void
-game_maybe_quit (GtkWidget *widget, int button)
-{
- 	if (button == GTK_RESPONSE_YES) {
- 	 	gtk_widget_destroy (app);
- 	 	gtk_main_quit ();
- 	}
-
 }
 
 static int
@@ -819,7 +810,7 @@ game_about_callback (GtkWidget *widget, void *data)
 
    if (about != NULL) {
         gtk_window_present (GTK_WINDOW(about));
-        return;
+        return TRUE;
    }
    {
 	   char *filename = NULL;
@@ -853,7 +844,7 @@ game_about_callback (GtkWidget *widget, void *data)
 	return TRUE;
 }       
 
-void
+static void
 set_backgnd_color (gchar *str)
 {
 	GdkColormap *colormap;
@@ -870,7 +861,7 @@ set_backgnd_color (gchar *str)
 	gdk_color_parse (backgnd.name, &backgnd.color);
 
 	colormap = gtk_widget_get_colormap (draw_area);
-	gdk_color_alloc (colormap, &backgnd.color);
+	gdk_colormap_alloc_color (colormap, &backgnd.color, FALSE, TRUE);
 	widget_style = gtk_widget_get_style (draw_area);
 	temp_style = gtk_style_copy (widget_style);
 	temp_style->bg[0] = backgnd.color;
@@ -881,7 +872,7 @@ set_backgnd_color (gchar *str)
 	gtk_widget_set_style (draw_area, temp_style);
 }
 
-void
+static void
 bg_color_changed_cb (GConfClient *client,
 		      guint cnxn_id,
 		      GConfEntry *entry,
@@ -894,7 +885,7 @@ bg_color_changed_cb (GConfClient *client,
 	set_backgnd_color (color);
 }
 
-void
+static void
 bg_color_callback (GtkWidget *widget, gpointer data)
 {
 	static char *tmp = "";
@@ -942,7 +933,8 @@ static void
 fill_menu (GtkWidget *menu, char * mtype, gboolean bg)
 {
 	struct dirent *e;
-	char *dname = gnome_program_locate_file (NULL, GNOME_FILE_DOMAIN_APP_PIXMAP, ("glines"), FALSE, NULL);
+	gchar *dname = gnome_program_locate_file (NULL, GNOME_FILE_DOMAIN_APP_PIXMAP,
+						  ("glines"), FALSE, NULL);
 	DIR *dir;
 	int itemno = 0;
 	
@@ -953,32 +945,32 @@ fill_menu (GtkWidget *menu, char * mtype, gboolean bg)
 	
 	while ((e = readdir (dir)) != NULL){
 		GtkWidget *item;
-		char *s = g_strdup (e->d_name);
+		gchar *s = g_strdup (e->d_name);
 
-		if (!strstr (e->d_name, mtype)) {
+		if (! g_strrstr (e->d_name, mtype)) {
 			g_free (s);
 			continue;
 		}
 			
 		item = gtk_menu_item_new_with_label (s);
 		gtk_widget_show (GTK_WIDGET(item));
-		gtk_menu_shell_append (GTK_MENU_SHELL(menu), GTK_WIDGET(item));
+		gtk_menu_shell_append (GTK_MENU_SHELL (menu), GTK_WIDGET (item));
 		if(bg)
-			g_signal_connect (G_OBJECT(item), "activate",
+			g_signal_connect (G_OBJECT (item), "activate",
 					  G_CALLBACK (set_selection1), s);
 		else
-			g_signal_connect (G_OBJECT(item), "activate",
+			g_signal_connect (G_OBJECT (item), "activate",
 					  G_CALLBACK (set_selection), s);
-		g_signal_connect (G_OBJECT(item), "destroy",
+		g_signal_connect (G_OBJECT (item), "destroy",
 				  G_CALLBACK (free_str), s);
 
 		if (bg){
 			if (!strcmp(box_filename, s))
-				gtk_menu_set_active(GTK_MENU(menu), itemno);
+				gtk_menu_set_active (GTK_MENU (menu), itemno);
 		}
 		else {
 			if (!strcmp(ball_filename, s))
-				gtk_menu_set_active(GTK_MENU(menu), itemno);
+				gtk_menu_set_active (GTK_MENU (menu), itemno);
 		}
 			  
 		itemno++;
@@ -1011,12 +1003,11 @@ pref_dialog_response (GtkDialog *dialog, gint response, gpointer data)
 		}      
 }
 
+static void
 game_props_callback (GtkWidget *widget, void *data)
 {
-	GtkWidget *w, *menu, *omenu, *l, *hb, *hb1, *fv, *cb;
-	GtkWidget *button;
+	GtkWidget *w, *menu, *omenu, *l, *fv;
 	GtkWidget *frame;
-	GtkWidget *space_label;
 	GtkWidget *table;
 
 	if (! pref_dialog)
@@ -1125,6 +1116,7 @@ configure_event_callback (GtkWidget *widget, GdkEventConfigure *event)
 			    TRUE, 0, 0, -1, -1);
 
 	refresh_screen ();
+	return TRUE;
 }
 
 static int
@@ -1136,16 +1128,14 @@ save_state (GnomeClient *client,
 	    gint fast,
 	    gpointer client_data)
 {
-	const gchar *prefix= gnome_client_get_config_prefix (client);
-	gchar *argv[]= { "rm", "-r", NULL };
 	gchar *buf;
 	int i;
 
 	gconf_client_set_int (gconf_client_get_default (),
                               "/apps/glines/saved/score", score, NULL);
 
-	buf = g_malloc(FIELDSIZE * FIELDSIZE * 4 + 1);
-	for(i = 0; i < FIELDSIZE * FIELDSIZE; i++)
+	buf = g_malloc (FIELDSIZE * FIELDSIZE * 4 + 1);
+	for (i = 0; i < FIELDSIZE * FIELDSIZE; i++)
 	{
 		buf[i*4] = field[i].color + 'h';
 		buf[i*4 + 1] = field[i].pathsearch + 'h';
@@ -1162,9 +1152,6 @@ save_state (GnomeClient *client,
                                  "/apps/glines/saved/preview", buf, NULL);
 	g_free(buf);
 
-	/*	argv[2]= gnome_config_get_real_path (prefix);
-		gnome_client_set_discard_command (client, 3, argv);
-	*/
 	return TRUE;
 }
 
@@ -1238,7 +1225,7 @@ restart (void)
 static gint
 client_die (GnomeClient *client, gpointer client_data)
 {
- 	gtk_exit (0);
+	gtk_main_quit ();
 
  	return FALSE;
 
@@ -1384,7 +1371,7 @@ init_config (void)
 int
 main (int argc, char *argv [])
 {
-	GtkWidget *label, *frame;   
+	GtkWidget *frame;   
 	GtkWidget *vbox, *hbox;
 	GnomeClient *client;
 	
@@ -1421,7 +1408,7 @@ main (int argc, char *argv [])
 
 	app = gnome_app_new ("glines", _("Glines"));
 
-	gtk_window_set_policy (GTK_WINDOW (app), FALSE, FALSE, TRUE);
+	gtk_window_set_resizable (GTK_WINDOW (app), FALSE);
 	g_signal_connect (G_OBJECT (app), "delete_event",
 	                  G_CALLBACK (game_quit_callback), NULL);
 	g_signal_connect (G_OBJECT (app), "configure_event",
@@ -1449,8 +1436,10 @@ main (int argc, char *argv [])
 	draw_area = gtk_drawing_area_new ();
 	next_draw_area = gtk_drawing_area_new ();
 
-	gtk_widget_set_usize (draw_area, BOXSIZE*9, BOXSIZE*9);
-	gtk_widget_set_usize (next_draw_area, BOXSIZE*3, BOXSIZE);
+	gtk_widget_set_size_request (GTK_WIDGET (draw_area),
+				     BOXSIZE * 9, BOXSIZE * 9);
+	gtk_widget_set_size_request (GTK_WIDGET (next_draw_area),
+				     BOXSIZE * 3, BOXSIZE);
 	gtk_box_pack_start (GTK_BOX (vbox), hbox, FALSE, FALSE, 0);
 	gtk_box_pack_start (GTK_BOX (hbox), frame, FALSE, FALSE, 0);
 	gtk_container_add (GTK_CONTAINER (frame), next_draw_area);
