@@ -1,3 +1,8 @@
+2003-06-17  William Jon McCann  <mccann@jhu.edu>
+
+	* glines.h:
+	* glines.c: Fixed compiler warnings.
+
 2003-06-16  William Jon McCann  <mccann@jhu.edu>
 
 	* Makefile.am (EXTRA_DIST): Added schemas.in.
